@@ -151,6 +151,13 @@
   </tgroup>
  </informaltable>
  
+ <note>
+  <para>
+   As of Smarty 3.2  <link linkend="variable.merge.compiled.includes"><parameter>$merge_compiled_includes</parameter></link> is set to &true; 
+   by default for maximum redering speed. This enables the inline option automatically for all included templates.
+  </para>
+ </note>
+ 
  <example>
   <title>Simple {include} example</title>
   <programlisting>
@@ -318,9 +325,7 @@
  </example>
  <para>
   See also
-  <link linkend="language.function.include.php"><varname>{include_php}</varname></link>,
-  <link linkend="language.function.insert"><varname>{insert}</varname></link>,
-  <link linkend="language.function.php"><varname>{php}</varname></link>,
+  <link linkend="variable.merge.compiled.includes"><parameter>$merge_compiled_includes</parameter></link>,
   <link linkend="resources">template resources</link> and
   <link linkend="tips.componentized.templates">componentized templates</link>.
  </para>
